# Stock-Database

./: .gitignore  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  README.md  UPDATES.md  package-lock.json  pyproject.toml  pyrightconfig.json  requirements.txt  stock-tracker.db
.gitignore/: .evn
app/: api_client.py  main.py  security.py
app/crud/: crud.py
app/models/: __init__.py  model.py
app/routers/: portfolios.py  stocks.py  transactions.py  users.py
app/schemas/: __init__.py  schemas.py
backend/: .env.example  LOGGING.md  README.md  RUNNING.md  alembic.ini  pyproject.toml  pyrightconfig.json  requirements.txt  run.py  schemas.py
backend/alembic/: env.py
backend/alembic/versions/: 0cfc8b7becd5_initial_database_setup.py  39c2032f8332_add_created_at_to_portfolios.py
backend/app/: config.py  dependencies.py  error_handlers.py  exceptions.py  logging_config.py  main.py  security.py  websocket_manager.py
backend/app/.gitignore/: .evn
backend/app/api_client/: api_client.py
backend/app/crud/: __init__.py  crud.py
backend/app/database/: __init__.py  database.py
backend/app/models/: model.py
backend/app/routers/: auth.py  portfolios.py  stocks.py  transactions.py  users.py
backend/app/schemas/: __init__.py  schemas.py
backend/app/services/: portfolio_service.py  (+1 more)
backend/tests/: README.md  conftest.py  test_api_endpoints.py  test_auth.py  test_crud.py  test_transaction_service.py
dependencies/: dependencies.py
frontend/: README.md  index.html  package-lock.json
frontend/src/: App.css  App.tsx  index.css
(+38 files in other folders)
